# ozon-env

./: .coverage  .coveralls.yml  .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_test.sh  tox.ini
.github/workflows/: action.yml  python-app.yml  test.yml
ozonenv/: OzonEnv.py
ozonenv/core/: BaseModels.py  ModelMaker.py  OzonClient.py  OzonModel.py  OzonOrm.py  OzonRecord.py  exceptions.py  i18n.py  utils.py
ozonenv/core/cache/: cache.py  cache_utils.py  coder.py
ozonenv/core/db/: BsonTypes.py  mongodb_utils.py
tests/: test_common.py  test_ozon_env_0_I18n.py  test_ozon_env_1_base_mongo.py  test_ozon_env_2_ModelMaker.py  test_ozon_env_3_test_form_1.py  test_ozon_env_4_inject_model.py  test_ozon_env_5_basic_for_worker.py  test_ozon_env_6_json_logic.py  test_utils.py
tests/data/: coll_session.json  coll_user.json  config.json  data_file_1.json  test_form_1.0_formio_schema.json  test_form_1.1_formio_schema.json  test_form_1_formio_data.json  test_form_1_formio_schema.json  test_form_2_formio_schema_doc.json  test_form_3_formio_schema_doc_riga.json  test_form_4_formio_schema_doc_bs.json  test_formio_conditional_visibility_json_logic_schema.json  test_formio_data_conditional_visibility_json_logic_hide_secret.json  test_formio_data_conditional_visibility_json_logic_show_secret.json  test_resource_1_formio_schema_product.json  test_resource_2_formio_schema_years.json
tests/i18n_translated/: messages.pot
tests/i18n_translated/en/LC_MESSAGES/: messages.mo  messages.po
tests/i18n_translated/it/LC_MESSAGES/: messages.mo  messages.po
tests/models/: README  documento.py  documento_beni_servizi.py  prodotti.py  riga_doc.py  test_form_1.py
tests/unit/: test_unit_base_models.py
