[tool.poetry]
name = "ozon-env"
version = "0.7.0"
homepage = "https://github.com/archetipo/ozon-env"
description = "Ozon Env API"
readme = "README.md"
authors = ["Alessio Gerace <alessio.gerace@gmail.com>"]
license = "MIT"
packages = [{ include = "ozonenv/**/*.py" }]
exclude = ["tests/*"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = ">=1.10.2"
httpx = ">=0.23.0"
pytz = ">=2022.1"
motor = ">=3.1.1"
ujson = ">=5.3.0"
python-dateutil = ">=2.8.2"
json_logic_qubit = ">=0.9.1"
aiofiles = ">=22.1.0"
aiopath = ">=0.6.10"
jinja2 = ">=3.1.2"
Babel = ">=2.10.3"
anyio = ">=0.21"
starlette = ">=0.20.4"
aiohttp = ">=3.8.1"
redis = ">=4.2.0rc1"
datamodel-code-generator = ">=0.14.0"


[tool.poetry.extras]
json_logic = ["json_logic_qubit"]


[tool.poetry.dev-dependencies]
pytest-asyncio = ">=0.19.0"
pytest-mock = "*"
pytest-cov = "2.12.0,<4.0.0"
flake9 = ">=3.8.3"
isort = ">=5.8.0"
black = ">=20.8b1"
bandit = ">=1.7.0"
pytest-benchmark = ">=3.4.1"

[tool.black]
line_length = 79

[tool.flake8]
max-complexity = 15
max-line-length = 79
extend-ignore = "E203,W293,W291"

[tool.isort]
line_length = 79
include_trailing_comma = true
force_single_line = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning'
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
