[tool.poetry]
name = "ozon-env"
version = "0.8.0"
homepage = "https://github.com/archetipo/ozon-env"
description = "Ozon Env API"
readme = "README.md"
authors = ["Alessio Gerace <alessio.gerace@gmail.com>"]
license = "MIT"
packages = [{ include = "ozonenv/**/*.py" }]
exclude = ["tests/*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = ">=1.10.2"
httpx = ">=0.23.0"
pytz = ">=2022.1"
motor = ">=3.1.1"
ujson = ">=5.3.0"
python-dateutil = ">=2.8.2"
json_logic_qubit = ">=0.9.1"
aiofiles = ">=22.1.0"
aiopath = ">=0.6.10"
jinja2 = ">=3.1.2"
Babel = ">=2.10.3"
anyio = ">=0.21"
starlette = ">=0.20.4"
aiohttp = ">=3.8.1"
redis = ">=4.2.0rc1"
datamodel-code-generator = ">=0.14.0"


[tool.poetry.extras]
json_logic = ["json_logic_qubit"]


[tool.poetry.dev-dependencies]
pytest-asyncio = ">=0.19.0"
pytest-mock = "*"
pytest-cov = "2.12.0,<4.0.0"
flake9 = ">=3.8.3"
isort = ">=5.8.0"
black = ">=22.10.0"
types-toml = "*"
httpx = "*"

[tool.flake8]
max-complexity = 15
max-line-length = 79
extend-ignore = "E203,W293,W291"

[tool.black]
line-length = 79
skip-string-normalization = true
exclude = '(tests/data|\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist|.*\/models\.py.*|.*\/models\/.*)'

[tool.isort]
line_length = 79
include_trailing_comma = true
use_parentheses = true
force_single_line = true
skip = "tests"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning'
]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if not TYPE_CHECKING:"]

omit = [
    "tests/*",
    "ozonenv/core/cache/*",
    "ozonenv/core/db/BsonTypes.py",
    "ozonenv/core/utils.py",
    "ozonenv/core/OzonClient.py"
]

[project]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


