[tool.poetry]
name = "ozon-env"
version = "2.2.15"
homepage = "https://github.com/archetipo/ozon-env"
description = "Ozon Env API"
readme = "README.md"
authors = ["Alessio Gerace <alessio.gerace@gmail.com>"]
license = "MIT"
packages = [{ include = "ozonenv/**/*.py" }]
exclude = ["tests/*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = { version = ">=2.9" }
httpx = ">=0.27.2"
pytz = ">=2024.2"
motor = ">=3.1.1"
ujson = ">=5.5.0"
python-dateutil = ">=2.8.2"
json_logic_qubit = ">=0.9.1"
aiofiles = ">=22.1.0"
aiopath = [{version = "^0.6.11", python =">=3.10,<3.12"},{version = ">=0.7.7", python =">=3.12,<4"}]
setuptools = {version =">=75.1.0", python =">=3.12"}
jinja2 = ">=3.1.4"
Babel = ">=2.10.3"
anyio = ">=0.20"
starlette = ">=0.39.2"
redis = ">=4.2.0rc1"
datamodel-code-generator = ">=0.24.0,<=0.24.4"
#datamodel-code-generator = ">=0.25.5"
pendulum = ">=3.0.0"
iso8601 = "*"


[tool.poetry.extras]
json_logic = ["json_logic_qubit"]


[tool.poetry.dev-dependencies]
pytest-asyncio = ">=0.23.4"
pytest-mock = "*"
pytest-cov = "4.1.0"
flake9 = ">=3.8.3"
isort = ">=5.8.0"
black = ">=22.10.0"
types-toml = "*"
httpx = "*"
iso8601 = "*"

[tool.flake8]
max-complexity = 15
max-line-length = 79
extend-ignore = "E203,W293,W291,E211"

[tool.black]
line-length = 79
skip-string-normalization = true
exclude = '(tests/data|\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist|.*\/models\.py.*|.*\/models\/.*)'

[tool.isort]
line_length = 79
include_trailing_comma = true
use_parentheses = true
force_single_line = true
skip = "tests"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',

]
show-capture='all'

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if not TYPE_CHECKING:"]

omit = [
    "tests/*",
    "ozonenv/core/cache/*",
    "ozonenv/core/db/BsonTypes.py",
    "ozonenv/core/utils.py",
    "ozonenv/core/OzonClient.py"
]

[project]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


